syntax = "proto3";
package bass;

option go_package = "pkg/proto";

message Value {
  oneof value {
    Null null = 1;
    Bool bool = 2;
    Int int = 3;
    String string = 4;
    Secret secret = 5;
    Array array = 6;
    Object object = 7;
    Thunk thunk = 8;
    CommandPath command_path = 9;
    FilePath file_path = 10;
    DirPath dir_path = 11;
    HostPath host_path = 12;
    ThunkPath thunk_path = 13;
    LogicalPath logical_path = 14;
    ThunkAddr thunk_addr = 15;
    CachePath cache_path = 16;
  };
};

message Thunk {
  ThunkImage image = 1;
  bool insecure = 2;
  repeated Value args = 4;
  repeated Value stdin = 5;
  repeated Binding env = 6;
  ThunkDir dir = 7;
  repeated ThunkMount mounts = 8;
  repeated Binding labels = 9;
  repeated ThunkPort ports = 10;
  ThunkTLS tls = 11;
};

message ThunkAddr {
  Thunk thunk = 1;
  string port = 2;
  string format = 3;
};

message ThunkPort {
  string name = 1;
  int32 port = 2;
};

message ThunkTLS {
  FilePath cert = 1;
  FilePath key = 2;
};

message ThunkImage {
  oneof image {
    ImageRef ref = 1;
    Thunk thunk = 2;
    ImageArchive archive = 3;
    ImageDockerBuild docker_build = 4;
  };
}

message ImageRef {
  Platform platform = 1;
  oneof source {
    string repository = 2;
    ThunkPath file = 3 [deprecated=true];
    ThunkAddr addr = 6;
  };
  optional string tag = 4;
  optional string digest = 5;
};

message ImageArchive {
  Platform platform = 1;
  ThunkPath file = 2;
  optional string tag = 3;
};

message ImageDockerBuild {
  Platform platform = 1;
  ImageBuildInput context = 2;
  optional string dockerfile = 3;
  optional string target = 4;
  repeated BuildArg args = 5;
};

message ImageBuildInput {
  oneof input {
    ThunkPath thunk = 1;
    HostPath host = 2;
    LogicalPath logical = 3;
  };
};

message BuildArg {
  string name = 1;
  string value = 2;
};

message Platform {
  string os = 1;
  string arch = 2;
};

message ThunkDir {
  oneof dir {
    DirPath local = 12;
    ThunkPath thunk = 13;
    HostPath host = 14;
  };
};

message ThunkMountSource {
  oneof source {
    ThunkPath thunk = 1;
    HostPath host = 2;
    LogicalPath logical = 3;
    CachePath cache = 4;
    Secret secret = 5;
  };
};

message ThunkMount {
  ThunkMountSource source = 1;
  FilesystemPath target = 2;
};

message Array {
  repeated Value values = 1;
};

message Object {
  repeated Binding bindings = 1;
};

message Binding {
  string symbol = 1;
  Value value = 2;
};

message Null {};

message Bool {
  bool value = 1;
};

message Int {
  int64 value = 1;
};

message String {
  string value = 1;
}

message CachePath {
  string id = 1;
  FilesystemPath path = 2;
};

message Secret {
  string name = 1;
};

message CommandPath {
  string name = 1;
};

message FilePath {
  string path = 1;
};

message DirPath {
  string path = 1;
};

message FilesystemPath {
  oneof path {
    FilePath file = 1;
    DirPath dir = 2;
  };
};

message ThunkPath {
  Thunk thunk = 1;
  FilesystemPath path = 2;
};

message HostPath {
  string context = 1;
  FilesystemPath path = 2;
};

message LogicalPath {
  oneof path {
    File file = 1;
    Dir dir = 2;
  };

  message File {
    string name = 1;
    bytes content = 2;
  };

  message Dir {
    string name = 1;
    repeated LogicalPath entries = 2;
  };
};
