syntax = "proto3";
package bass;

option go_package = "pkg/proto";

import "progress.proto";
import "bass.proto";

service Runtime {
  rpc Resolve(ImageRef) returns (Thunk) {}
  rpc Run(Thunk) returns (stream RunResponse) {}
  rpc Read(Thunk) returns (stream ReadResponse) {}
  rpc Export(Thunk) returns (stream ExportResponse) {}
  rpc Publish(PublishRequest) returns (stream PublishResponse) {}
  rpc ExportPath(ThunkPath) returns (stream ExportResponse) {}
};

message PublishRequest {
  ImageRef ref = 1;
  Thunk thunk = 2;
};

message PublishResponse {
  oneof inner {
    Progress progress = 1;
    ImageRef published = 2;
  };
};

message RunResponse {
  oneof inner {
    Progress progress = 1;
  };
};

message ReadResponse {
  oneof inner {
    Progress progress = 1;
    bytes output = 2;
  };
};

message ExportResponse {
  oneof inner {
    Progress progress = 1;
    bytes data = 2;
  };
};
